# CPace

./: .gitignore  CMakeLists.txt
engine/core/: common.h  debug.cpp  debug.h  engine.c  engine.cpp  engine.h  utils.h
engine/input/: input.c  input.cpp  input.h
engine/math/: cpmath.h  vec2.h
engine/math/mat2x2/: mat2x2.c  mat2x2.h
engine/math/mat3x3/: mat3x3.c  mat3x3.h
engine/math/vec2/: vec2.c  vec2.h
engine/math/vec3/: vec3.c  vec3.h
engine/renderer/: renderer.c  renderer.cpp  renderer.h  window.c  window.h
engine/renderer/asset_manager/: asset_manager.c  asset_manager.cpp  asset_manager.h
engine/shader/: shader.c  shader.cpp  shader.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
